@@ -1,5 +1,7 @@
 v0.13.1
-	* FIX : English language warning
+=======
+    * FIX : <Esc> in Name property inspector causes AV (fixes #1672)
+    * FIX : English language warning
     * FIX : proper handling of the "Don't connect GPX nodes..." disabling.
     * FIX : Fit the style editor in 1024x600 resolution (fixes #1609)
     * FIX : Reflect in dirty dock the fact that multiple objects were changed together (fixes #1507)
